tests/error/type_errors/not_not_bool.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> bool:
    return not "x"
